--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "watch-sass": "sass scss/style.scss css/style.css -w",
     "dev-server": "live-server",
-    "start": "npm-run-all --parallel watch-sass dev-server"
+    "start": "npm-run-all --parallel watch-sass dev-server",
+    "build": "sass scss/style.scss css/style.css --style=compressed"
   },
   "keywords": [],
   "author": "Haroon Mustafa",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.56.1"
   }
 }
